[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
name = "cht_beware"
authors = [
    {name = "Floortje Roelvink", email = "floortje.roelvink@deltares.nl"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pyproj",
    "scipy",
    "xarray",
    "netCDF4",
    "mat73",
    "cht-utils",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "PD901"]
